# sudoku_rama_solver

./: .gitignore  README.md
src/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  main.cpp  main.h  main2.cpp  servers.json  sudoku_solver
src/sudoku/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  sudoku.pro
src/templates/: index.html  script.js  styles.css  ws.html
